Tests/Conformance/Generated/Builtin/Constant/Bls12_381/G1/Out_of_group.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G1.Out_of_group

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_bls12_381_G1_out_of_group "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/bls12-381/G1/out-of-group/out-of-group.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Bls12_381.G1.Out_of_group
